[package]
name = "hdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
hex-literal = "0.3.4"
sha1 = "0.10.5"
chrono = "*"
serde_json = "*"
mt_logger = "*"
rand = "0.8.5"
serde = { version = "*", features = ["derive"] }
